--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,7 @@
 <hr>
 <h2>Block number : {{ block_number }}</h2>
 <hr>
-<h4>Status : {{ info }}</h4>
+<div class="alert alert-success" role="alert">
+    <h4>Status : {{ info }}</h4>
+</div>
 {% endblock content %}
