--- a/templates/get.html
+++ b/templates/get.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Get Details{% endblock title %}
 {% block content %}
-<h1>Instructor Name : {{ instructor.name }} <br>Instructor Age : {{ instructor.age}}</h1>
+<h2><b>Account :</b> {{ data.account }} <br><b>Token Balance :</b> {{ data.balance }}</h2>
 <hr>
 <div class="alert alert-info" role="alert">
-    <h3>Estimated Gas spent : {{ instructor.estimated_gas }}</h3>
+    <h3>Estimated Gas spent : {{ data.gas }}</h3>
 </div>
 {% endblock content %}
