--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,10 @@
                 <a class="nav-link" href="{{ url_for('get') }}">Get <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('set')  }}">Set <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ url_for('set')  }}">Deposit <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('burn')  }}">Redeem <span class="sr-only">(current)</span></a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
