made some cosmetic changes to templates. changed 'tokens' to 'points'.

--- a/templates/burn.html
+++ b/templates/burn.html
@@ -3,7 +3,7 @@
 {% block title %}Set Details{% endblock title %}
 
 {% block content %}
-<h1>Redeem Tokens</h1>
+<h1>Redeem Points</h1>
 <form action="" method="post">
     {{ form.hidden_tag() }}
     <p>
