--- a/templates/get.html
+++ b/templates/get.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Get Details{% endblock title %}
 {% block content %}
-<h2><b>Account :</b> {{ data.account }} <br><b>Token Balance :</b> {{ data.balance }}</h2>
+<h2><b>Account :</b> {{ data.account }} <br><b>Points Balance :</b> {{ data.balance }}</h2>
 <hr>
 <div class="alert alert-info" role="alert">
     <h3>Estimated Gas spent : {{ data.gas }}</h3>
