--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>Loyalty Points PoC</h1>
 <p class="lead">This is a proof of concept application created on ethereum blockchain<br>to demonstrate an ecosystem of
-    loyalty points for an unnamed retail chain.</p>
+    loyalty points for an renowned retail chain.</p>
 <hr>
 <h2>Block number : {{ block_number }}</h2>
 <hr>
