--- a/templates/set.html
+++ b/templates/set.html
@@ -3,7 +3,7 @@
 {% block title %}Set Details{% endblock title %}
 
 {% block content %}
-<h1>Transfer Tokens</h1>
+<h1>Deposit Points</h1>
 <form action="" method="post">
     {{ form.hidden_tag() }}
     <p>
